# pokerapp-phh_equity_eval_pro

./: CMakeLists.txt  PD.md  RD.md  README.md  USAGEA.md
.github/workflows/: cmake-build-test.yml
src/lib/pokerstove/penum/: CMakeLists.txt  CardDistribution.cpp  PartitionEnumerator.h  ShowdownEnumerator.cpp
src/lib/pokerstove/peval/: CMakeLists.txt  CardSet.cpp  PokerEvaluation.cpp  PokerEvaluation.h  PokerEvaluationTables.h  PokerHandEvaluator.cpp  PokerHandEvaluator.h  PokerHandEvaluator_Alloc.cpp  Suit.cpp  Suit.h  UniversalHandEvaluator.h
src/lib/pokerstove/util/: CMakeLists.txt  argparse.hpp  combinations.h  combinations.test.cpp  format.hpp  strings.hpp  timing.hpp
src/programs/ps-colex/: CMakeLists.txt  main.cpp
src/programs/ps-eval/: CMakeLists.txt  main.cpp
src/programs/ps-lut/: CMakeLists.txt  main.cpp
